* quota tools now correctly handle zero grace times in old format (Jan Kara)
* edquota, setquota commit just grace times and flags - fixed possible races
  when used on live filesystem (Jan Kara)
* another fix to quotastats (Jan Kara)
* added check to format detection for bad endianity (Jan Kara)
* implemented conversion of files with bad endianity (Jan Kara)
* fixes in warnquota (Jan Kara)

Changes in quota-tools from 3.01-final to 3.01

* quotastats should now work better on old kernels (Jan Kara)
* quotacheck is more strict in checking it's arguments (Jan Kara)
* edquota and setquota should be now save to run for working user
  (number of used blocks and inodes could be wrong in previous versions)
  (Jan Kara)

Changes in quota-tools from 3.01-pre9 to 3.01-final

* quotacheck is using ext2_ino_t if defined (Jani Jaakkola, Jan Kara)
* rpc.rquotad now closes stdin, stdout unless run on foreground (Jani Jaakkola)
* setquota can be disabled in rpc.rquotad by commandline option (Jani Jaakkola)
* quota-tools should now work well also on RH 7.1 (Anders Blomdell, Jan Kara)
* quotacheck makes backup files only when told by option (Preston Brown)
* quotacheck now uses vfsv0 format when no quotafile is found (Jan Kara)
* fixed mountpoint scanning bug when bad mountpoint was specified (Jan Kara)
* fixed bug when device was specified instead of mountpoint (Preston Brown)
* fixed bug when scanning mountpoint NFS mounted filesystem (Jan Kara)
* repquota now resolves more names at once which makes it
  a lot faster (Jan Kara)


Changes in quota-tools from 3.01-pre8 to 3.01-pre9

* Improved host access handling (Jan Kara)
* Improved RPC error reporting (Jan Kara)
* Fixed bug in quotaon when run of kernel with XFS (Jan Kara)
* Implemented new mtab scanning with fallback to fstab when mtab not 
  found (Jan Kara)
* Improved speed of repquota for old quota format (Jan Kara)
* New Makefile style (Jan Kara)
* Fixed bug in configure in detecting of e2fslib (Jan Kara)