@@ -11,6 +11,14 @@ SUBJECT 	= Hey, user, clean up your account!
 CC_TO 		= "sysadm@localhost"
 SUPPORT 	= "support@myhost.com"
 PHONE 		= "(123) 456-1111 or (222) 333-4444"
+# Text in the beginning of the mail (if not specified, default text is used)
+# This way text can be split to more lines
+# Line break are done by '|' character
+MESSAGE         = Hello, I've noticed you use too much space\
+ on my disk|Delete your files on following filesystems:|
+# Text in the end of the mail (if not specified, default text using SUPPORT and PHONE
+# is created)
+SIGNATURE	= See you!|			Your admin|
 #
 # end of example warnquota.conf file
 #
